--- a/gms.web/Views/Shared/_Header.cshtml
+++ b/gms.web/Views/Shared/_Header.cshtml
@@ -186,8 +186,8 @@
                             <!--begin::Username-->
                             <div class="d-flex flex-column">
                                 <div class="fw-bold d-flex align-items-center fs-5">
-                                    @Model.FirstName
-                                    <span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span>
+                                    @Model.FirstName @Model.LastName
+                                    @* <span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span> *@
                                 </div>
                                 <a href="#" class="fw-semibold text-muted text-hover-primary fs-7">@Model.Email</a>
                             </div>
